# CycloneNew

./: .coverage  .cspell.json  .env.example  .flake8  .gitignore  AGENTS.md  CITATIONS.md  CODEX_INSTRUCTIONS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __init__.py  arbitrage_bot.py  backtest.py  config.json  config.yaml  data.py  dev-requirements.txt  docker-compose.tests.yml  docker-compose.yml  format_code.py  main.py  prd.md  pre-commit-ci.yaml  pre-commit-config.yaml  pyproject.toml  requirements.txt  sample_config.yaml  sample_secrets.yaml  secrets.yaml  settings.jsonc  settings.py.fixed  setup.ps1  setup.py  setup.sh  trade_log.csv  trader.py
.codex/: setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  test.yml
config/: __init__.py  settings.py
dashboard/: app.py  callbacks.py  data_provider.py  layouts.py
database/: models.py
deploy/: azure-deploy.yaml  bot-deployment.yaml  configmap.yaml  deployment.yaml  grafana-dashboards-configmap.yaml  grafana-service.yaml  network-policy.yaml  redis-statefulset.yaml  secrets.yaml
features/: feature_engineer.py
hydrobot/: __init__.py  trader.py
hydrobot/config/: __init__.py  settings.py  settings.py.new
hydrobot/data_ingestion/: __init__.py  client_binance.py  client_cryptonews.py  client_reddit.py  client_twitter.py  data_loader.py  market_data_stream.py  technicals.py
hydrobot/database/: __init__.py  db_utils.py  models.py
hydrobot/features/: __init__.py  feature_engineer.py  feature_generator.py
hydrobot/models/: __init__.py  inference.py  prediction_model.py  predictor.py  regime_model.py  trainer.py
hydrobot/trading/: __init__.py  (+6 more)
legacy/: arbitrage_bot.py
models/: inference.py  prediction_model.py  regime_model.py  trainer.py
results/: trade_log.csv
scripts/: manage_config.py  run_arbitrage_backtest.py  run_backfill.py  run_backtest.py  run_data_collection.py  validate_config.py
strategies/: base_strategy.py  impl_scalping.py  strategy_manager.py
tests/: test_core.py  test_portfolio.py  test_trading_utils.py
trading/: __init__.py  order_executor.py  portfolio.py  position_manager.py  risk_controller.py  trading_utils.py
utils/: logger_setup.py
(+16 files in other folders)
