[tool.poetry]
name = "hft-scalping-bot"
version = "0.1.0"
description = "High-frequency trading bot with ML-powered market prediction"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hydrobot"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = {version = "^1.21.0", source = "pypi"}
pandas = {version = "^1.3.0", source = "pypi"}
scikit-learn = "^1.0.0"
torch = {version = "^1.10.0", source = "pypi"}
ccxt = "^2.0.0"
aiohttp = "^3.8.0"
websockets = "^10.0"
pyyaml = "^6.0"
python-dotenv = "^0.19.0"
prometheus-client = "^0.12.0"
mlflow = "^2.1.0"
pydantic = "^2.0"
pyarrow = {version = "^11.0.0", source = "pypi"}
lightgbm = "^3.3.0"
requests = "^2.0"
joblib = "^1.3"
praw = "^7.7"
psycopg2 = "^2.9"
pytz = "^2024.1"
sqlalchemy = "^2.0"
tweepy = "^4.14"
aioredis = "^2.0"
redis = "^5.0"
colorama = "^0.4"
matplotlib = "^3.10"
tabulate = "^0.9"
pandas-ta = "^0.3"
dash = "^2.16"
dash-bootstrap-components = "^1.5"
plotly = "^5.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
coverage = "^7.4"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
black = "^24.1"
mypy = "^1.8"
flake8 = "^6.1"
isort = "^5.13"

[[tool.poetry.source]]
name = "pypi"
url = "https://pypi.org/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=hydrobot --cov-report=term-missing"
